<resources>
    <string name="app_name">WOW! WAO1</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="nav_home">Home</string>
    <string name="nav_friends">Friends</string>
    <string name="nav_friend_requests">Friend Requests</string>
    <string name="nav_messages">Messages</string>
    <string name="nav_notifications">Notifications</string>
    <string name="nav_blocked_users">Blocked Users</string>
    <string name="nav_account_settings">Account Settings</string>
    <string name="nav_info">Info</string>
    <string name="nav_contact_us">Contact Us</string>
    <string name="nave_invite">Invite Friends</string>
    <string name="nav_logout">Logout</string>
    <string name="login_email">Enter Email / Phone Number*</string>
    <string name="login_password">Enter Password*</string>
    <string name="login_btn_title">Login</string>
    <string name="login_empty_email">Phone cannot be empty</string>
    <string name="login_empty_password">Password cannot be empty</string>
    <string name="login_resend">RESEND</string>
    <string name="login_skip"><u>Skip</u></string>
    <string name="sign_up_first_name">First Name</string>
    <string name="sign_up_last_name">Last Name</string>
    <string name="sign_up_phone_number">Phone Number</string>
    <string name="sign_up_email">Email</string>
    <string name="sign_up_password">Password</string>
    <string name="sign_up_confirm_pass">Confirm Password</string>
    <string name="sign_up_btn_title">Signup</string>
    <string name="sign_up_empty_first_name">First name cannot be empty</string>
    <string name="sign_up_empty_last_name">Last name cannot be empty</string>
    <string name="sign_up_empty_email">Email cannot be empty</string>
    <string name="sign_up_empty_pass">Password cannot be empty</string>
    <string name="sign_up_empty_confirm_pass">Confirm password cannot be empty</string>
    <string name="sign_up_pass_miss_matched">Password miss matched</string>
    <string name="sign_up_valid_email">Please enter valid email</string>
    <string name="sign_up_country">Country</string>
    <string name="sign_up_verify_code">Verification Code</string>
    <string name="sign_up_send_btn">Send Code</string>
    <string name="phone_number">Phone Number</string>
    <string name="phone_activity_enter_number">Please enter your number</string>
    <string name="we_will_send_a_one_time_sms_for_verification">We will send a one time SMS for verification.</string>
    <string name="please_type_the_verification_code_send">Please type the verification code send</string>
    <string name="verification_code">Verification Code</string>
    <string name="didn_t_received_the_code">Didn\'t received the code?</string>
    <string name="new_post_enter_description">Enter Description</string>
    <string name="post">POST</string>
    <string name="new_post_private">Private</string>
    <string name="new_post_public">Public</string>
    <string name="new_post_select_post_type">Select Post Type</string>
    <string name="new_post_title">What\'s on your mind</string>
    <string name="edit_post_title">Edit Post</string>
    <string name="dummy_description">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s.</string>
    <string name="get_in_touch">Get In Touch</string>
    <string name="contact_us_fname">First Name</string>
    <string name="contact_us_lname">Last Name</string>
    <string name="contact_us_email">Email ID</string>
    <string name="contact_us_subject">Subject</string>
    <string name="contact_us_message">Message</string>
    <string name="contact_us_send">Send</string>
    <string name="contact_us_empty_firstname">First name cannot be empty</string>
    <string name="contact_us_empty_lastname">Last name cannot be empty</string>
    <string name="contact_us_empty_email">Email cannot be empty</string>
    <string name="contact_us_empty_subject">Subject cannot be empty</string>
    <string name="contact_us_empty_message">Message cannot be empty</string>
    <string name="contact_us_valid_email">Enter valid email</string>
    <string name="edit_first_name">Enter First Name</string>
    <string name="edit_last_name">Enter Last Name</string>
    <string name="edit_male">Male</string>
    <string name="edit_female">Female</string>
    <string name="edit_dob">Select Date of Birth</string>
    <string name="edit_phone">Enter Phone Number</string>
    <string name="edit_city">Select City</string>
    <string name="edit_state">Select State</string>
    <string name="edit_country">Select Country</string>
    <string name="edit_save">Save</string>
    <string name="edit_cancel">Cancel</string>
    <string name="edit_profile_title">Edit Profile</string>
    <string name="edit_empty_fname">First name cannot be empty</string>
    <string name="edit_empty_lname">Last name cannot be empty</string>
    <string name="edit_empty_phone">Phone no cannot be empty</string>
    <string name="edt_country_code">Select Country Code</string>
    <string name="dialoge_write_comment_here">Write Comment Here</string>
    <string name="friend_req_accept">Accept</string>
    <string name="friend_req_reject">Reject</string>
    <string name="friend_req_gender">Gender :</string>
    <string name="friend_req_age">Age :</string>
    <string name="blocked_user_unblocked">Unblock</string>
    <string name="blocked_user_gender">Gender :</string>
    <string name="blocked_user_age">Age :</string>
    <string name="friends_send_msg">Send Message</string>
    <string name="friends_gender">Gender :</string>
    <string name="friends_age">Age :</string>
    <string name="notifications_accept">Accept</string>
    <string name="notifications_reject">Reject</string>
    <string name="acc_settings_change_password">Change Password</string>
    <string name="acc_settings_old_pass">Enter Old Password</string>
    <string name="acc_settings_new_pass">Enter New Password</string>
    <string name="acc_settings_re_enter_pass">Re-enter Password</string>
    <string name="acct_settings_save">Save</string>
    <string name="acc_settings_cancel">Cancel</string>
    <string name="acc_settings_manage_push_notifications">Manage Push Notifications</string>
    <string name="acc_settings_request_accepted">When friend request gets accepted</string>
    <string name="acc_settings_received_request">When you have received a friend request</string>
    <string name="acc_settings_comments">When someone comments on your post</string>
    <string name="acc_settings_msg">When you received a message</string>
    <string name="acc_settings_deactivate_acc">Want to deactivate the account?</string>
    <string name="acc_settings_click_here">Click Here</string>
    <string name="acc_settings_pass_empty">Password cannot be empty</string>
    <string name="acc_settings_pass_length">At least 6 character required</string>
    <string name="acc_settings_pass_must_match">Password must be same</string>
    <string name="acc_settings_deactivate_confirmation_msg">Are you sure you want to deactivate the account?</string>
    <string name="acc_settings_yes">Yes</string>
    <string name="acc_settings_no">No</string>
    <string name="acc_settings_enter_pass">Enter Password</string>
    <string name="acc_settings_submit">Submit</string>
    <string name="app_language">Language</string>
    <string name="invite_friends">Invite Friends</string>
    <string name="search_view_all">VIEW ALL</string>
    <string name="search_filter_by">FILTER BY</string>
    <string name="search_by_location">Search By Location</string>
    <string name="search_result_type">Result Type</string>
    <string name="search_user">User</string>
    <string name="search_post">Post</string>
    <string name="share_post_write_something">Write Something</string>
    <string name="share_post_select_post_type">Select Post Type</string>
    <string name="share">Share</string>
    <string name="share_cancel">Cancel</string>
    <string name="share_post_title">Share Post</string>
    <string name="not_available">N/A</string>
    <string name="photos">Photos</string>
    <string name="user_profile_following_status">You are following</string>
    <string name="follow">Follow</string>
    <string name="age">Year Old</string>
    <string name="dialog_forgot_pass_email">Enter Email</string>
    <string name="forgot_pass_submit">Submit</string>
    <string name="forgot_email_cannot_be_empty">Email cannot be empty</string>
    <string name="forgot_email_valid_email">Enter valid email</string>
    <string name="place_details">&lt;b&gt;%1$s&lt;/b&gt;&lt;br/&gt;&lt;i&gt;Place Id: %2$s&lt;/i&gt;&lt;br/&gt;Address: %3$s&lt;br/&gt;Phone: %4$s&lt;br/&gt;Website: %5$s</string>
    <string name="uh_ugh">Uh Ugh!</string>
    <string name="slow_or_no_internet_connection">Slow or no internet connection.</string>
    <string name="please_check_your_internet_connection">Please check your internet connection.</string>
    <string name="reload">Reload</string>
    <string name="please_verify_your_email_first_if_you_didn_t_received_the_code">Please verify your email first. If you didn\'t received the code?</string>
    <string name="type_message_here">Type Message Here..</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="people">PEOPLE</string>
    <string name="posts">POSTS</string>
    <string name="reply">Reply (0)</string>
    <string name="comments_0">Comments (0)</string>
    <string name="replies_0">Replies (0)</string>
    <string name="post_cannot_be_empty">Post cannot be empty</string>
    <string name="cancel_permissions">Cancelling, required permissions are not granted</string>
    <string name="comments_title">Comments</string>
    <string name="max_file_size">Maximum upload file size : 25 MB</string>
    <string name="descard_changes">Discard Changes?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="exit_msg">Do you really want to Exit?</string>
    <string name="logout_msg">Do you really want to Logout?</string>
    <string name="Replies_title">Replies</string>
    <string name="unfriend_alert_msg">Do you really want to Unfriend?</string>
    <string name="unfollow">Unfollow</string>
    <string name="permission_alert_msg">You have denied one or more permissions please allow all the permission and try again</string>
    <string name="ok">OK</string>
    <string name="location">Location</string>
    <string name="contact_no">Contact No.</string>
    <string name="dob">DOB</string>
    <string name="you_are_following">You are following</string>
    <string name="please_type_correct_code">Please type correct code</string>
    <string name="code_cannot_be_empty">Code cannot be empty</string>
    <string name="unblock_user_alert_msg">Do you really want to Unblock User?</string>
    <string name="delete_comment_alert_msg">Do you really want to delete the comment?</string>
    <string name="delete_reply_alert_msg">Do you really want to delete the reply?</string>
    <string name="reply_title">Reply</string>
    <string name="delete_post_alert_msg">Do you really want to delete this post?</string>
    <string name="report_post_alert_msg">Do you really want to report this post?</string>
    <string name="delete_msg_alert_msg">Do you really want to delete message?</string>
    <string name="gender">Gender</string>
    <string name="loading_dialog_title">Loading...</string>
    <string name="loading_dialog_msg">Please Wait While Loading</string>
    <string name="error">Error</string>
    <string name="title_activity_welcome">Home Screen</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
</resources>