<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fillViewport="true">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="@dimen/default_padding"
        tools:context="com.application.wowwao1.Activities.SignUpActivity">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:text="@string/app_name"
            android:textSize="40sp"
            android:textStyle="bold" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/inLayoutFname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">

            <EditText
                android:id="@+id/edtFirstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/sign_up_first_name"
                android:inputType="text"
                android:maxLines="1" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/inLayoutLname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">

            <EditText
                android:id="@+id/edtLastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/sign_up_last_name"
                android:inputType="text"
                android:maxLines="1" />
        </android.support.design.widget.TextInputLayout>


          <android.support.design.widget.TextInputLayout
              android:id="@+id/inLayoutEmail"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginTop="10dp"
              app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">

              <EditText
                  android:id="@+id/edtEmail"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:hint="@string/sign_up_email"
                  android:inputType="textEmailAddress"
                  android:maxLines="1" />
          </android.support.design.widget.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="15dp"
            android:text="@string/sign_up_country" />


        <Spinner
            android:id="@+id/spinnerCountryCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="10dp"
            android:background="@color/shadowColor" />


        <android.support.design.widget.TextInputLayout
            android:id="@+id/inLayoutPhoneNo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">

            <EditText
                android:id="@+id/edtPhoneNo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:digits="0123456789"
                android:hint="@string/sign_up_phone_number"
                android:inputType="number"
                android:maxLines="1" />
        </android.support.design.widget.TextInputLayout>


        <LinearLayout
            android:layout_marginTop="15dp"
            android:weightSum="5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <android.support.design.widget.TextInputLayout
                android:layout_weight="4.9"
                android:id="@+id/inLayoutVerificationCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">

                <EditText
                    android:id="@+id/edtVerification"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:digits="0123456789"
                    android:maxLength="6"
                    android:hint="@string/sign_up_verify_code"
                    android:inputType="number"
                    android:maxLines="1" />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/btn_sendVerificationCode"
                android:textColor="@color/white"
                android:layout_gravity="center_vertical"
                android:background="@drawable/button_border"
                android:layout_weight="0.1"
                android:text="@string/sign_up_send_btn"
                android:textAllCaps="false"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>




        <android.support.design.widget.TextInputLayout
            android:id="@+id/inLayoutPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/edtPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/sign_up_password"
                android:inputType="textPassword"
                android:maxLines="1" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/inLayoutConfirmPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/edtConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/sign_up_confirm_pass"
                android:inputType="textPassword"
                android:maxLines="1" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btnSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/button_border"
            android:text="@string/sign_up_btn_title"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="20dp" />
    </LinearLayout>
</ScrollView>