<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="@dimen/default_padding">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/acc_settings_deactivate_confirmation_msg"
        android:textColor="@color/black" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtYes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="15dp"
            android:drawableLeft="@drawable/accept"
            android:drawablePadding="20dp"
            android:drawableTint="@color/redColor"
            android:text="@string/acc_settings_yes"
            android:textColor="@color/redColor"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/txtNo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:drawableLeft="@drawable/reject"
            android:drawablePadding="20dp"
            android:text="@string/acc_settings_no"
            android:textSize="20sp" />
    </LinearLayout>
</LinearLayout>