<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layoutFilterDialog"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D0000000"
    android:orientation="vertical"
    android:paddingBottom="@dimen/default_padding"
    android:paddingLeft="@dimen/default_padding"
    android:paddingRight="@dimen/default_padding"
    android:visibility="gone">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/search_filter_by"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:drawableRight="@drawable/location"
            android:hint="@string/search_by_location" />

        <fragment
            android:id="@+id/place_autocomplete_fragment"
            android:name="com.google.android.gms.location.places.ui.PlaceAutocompleteFragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="05dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/search_result_type"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/layoutTypeUser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="10dp">

                <TextView
                    android:id="@+id/txtUser"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/search_user" />

                <ImageView
                    android:id="@+id/imgUser"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:src="@drawable/age" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layoutTypePost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="10dp">

                <TextView
                    android:id="@+id/txtPost"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/search_post" />

                <ImageView
                    android:id="@+id/imgPost"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:src="@drawable/post" />
            </LinearLayout>
        </LinearLayout>

        <ImageView
            android:id="@+id/imgArrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:padding="5dp"
            android:src="@drawable/up_arrow" />
    </LinearLayout>
</LinearLayout>